# cookbooks

./: .env.example  README.md  auth.config.ts  auth.ts  package.json  pnpm-lock.yaml
app/: page.tsx
app/dashboard/(overview)/: page.tsx
app/dashboard/picker/: page.tsx
app/dashboard/recipes/: error.tsx  page.tsx
app/dashboard/recipes/[id]/: not-found.tsx
app/dashboard/recipes/[id]/edit/: page.tsx
app/dashboard/recipes/[id]/view/: page.tsx
app/dashboard/settings/: page.tsx
app/lib/: actions.ts  data.ts  definitions.ts  errors.ts  token.ts  utils.ts
app/login/: page.tsx
app/ui/: cookbooks-logo.tsx  home.module.css  randomizer.tsx  search-status.tsx  skeletons.tsx
app/ui/dashboard/: cards.tsx  cookbooks-list.tsx  nav-links.tsx  sidenav.tsx
app/ui/recipes/: buttons.tsx  create-form.tsx  edit-form.tsx  pagination.tsx  rating.tsx  status.tsx  table.tsx  user-recipe.tsx
backend/: .env.example  .gitignore  README.md  app.py  process_photo.py  process_photos.py  pyproject.toml
backend/api/cookbooks/: __init__.py  model.py  views.py
backend/api/recipes/: __init__.py  model.py  views.py
backend/api/recipes/user/: __init__.py  model.py  views.py
backend/api/users/: __init__.py  model.py  views.py
backend/process/: ai_processor.py  db.py  image_preprocessor.py  model.py
types/: next-auth.d.ts
